parte 2 instalacion angular

--- a/prueba3e/ionic.config.json
+++ b/prueba3e/ionic.config.json
@@ -1,5 +1,7 @@
 {
-  "name": "ionic-app-base",
-  "integrations": {},
+  "name": "prueba3e",
+  "integrations": {
+    "capacitor": {}
+  },
   "type": "angular"
 }
